--- a/app/src/main/res/layout/content_my_shinies.xml
+++ b/app/src/main/res/layout/content_my_shinies.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,10 +10,12 @@
         android:layout_height="match_parent"
         tools:context="com.aarstrand.zindre.pokechecklist.MyShiniesActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:text="@string/large_text"/>
+            android:layout_below="@id/toolbar"
+            android:scrollbars="vertical"
+            android:id="@+id/shinies_list">
+    </android.support.v7.widget.RecyclerView>
 
-</android.support.v7.widget.RecyclerView>
+</RelativeLayout>
