nå leses det fra databasen i pokedexen, men scrolling fungerer ikke helt enda

--- a/app/src/main/res/layout/content_pokedex.xml
+++ b/app/src/main/res/layout/content_pokedex.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/toolbar"
             android:scrollbars="vertical"
-            android:id="@+id/pokemon_list">
+            android:id="@+id/pokemon_list" android:layout_alignParentBottom="true">
     </android.support.v7.widget.RecyclerView>
 
 
