--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -41,11 +41,15 @@
             android:text="@string/button4"
             android:layout_width="400dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp" android:id="@+id/button4"
+            android:layout_marginTop="30dp"
+            android:id="@+id/button4"
             android:layout_below="@+id/button3"/>
     <TextView
             android:text="@string/textview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" android:layout_marginBottom="71dp" android:id="@+id/textView"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="71dp"
+            android:id="@+id/textView"/>
 </RelativeLayout>
