--- a/app/src/main/res/layout/content_pokedex.xml
+++ b/app/src/main/res/layout/content_pokedex.xml
@@ -14,7 +14,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/toolbar"
             android:scrollbars="vertical"
-            android:id="@+id/pokemon_list" android:layout_alignParentBottom="true">
+            android:id="@+id/pokemon_list"
+            android:layout_alignParentBottom="true">
     </android.support.v7.widget.RecyclerView>
 
 
@@ -23,5 +24,6 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:theme="?attr/actionBarTheme"
-            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"/>
+            android:minHeight="?attr/actionBarSize"
+            android:id="@+id/toolbar"/>
 </RelativeLayout>
