--- a/app/src/main/res/layout/content_hunt.xml
+++ b/app/src/main/res/layout/content_hunt.xml
@@ -6,5 +6,16 @@
         android:layout_width="match_parent"
         android:id="@+id/hunt_pager"
 >
+    <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/hunt_toolbar"
+    />
+
+    <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:id="@+id/hunt_tabs"
+            android:layout_height="wrap_content"
+    />
 
 </android.support.v4.view.ViewPager>
