--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,60 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/content_main"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="@color/backgroundGrey"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/activity_main"
-        tools:context="com.aarstrand.zindre.pokechecklist.MainActivity">
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+>
+    <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/toolbarBackground"
+            app:titleTextColor="@color/TitleTextColor"
+            android:id="@+id/main_toolbar"
+    />
+
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/content_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:background="@color/backgroundGrey"
+            tools:showIn="@layout/activity_main"
+            tools:context="com.aarstrand.zindre.pokechecklist.MainActivity"
+            android:orientation="vertical"
+    >
 
 
-    <Button
-            android:text="@string/button1"
-            android:background="@color/buttonColor"
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:id="@+id/button"
-            android:onClick=""/>
-    <Button
-            android:text="@string/button2"
-            android:background="@color/buttonColor"
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/button"
-            android:layout_marginTop="30dp"
-            android:id="@+id/button2"/>
-    <Button
-            android:text="@string/button3"
-            android:background="@color/buttonColor"
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/button2"
-            android:layout_marginTop="30dp"
-            android:id="@+id/button3"/>
-    <Button
-            android:text="@string/button4"
-            android:background="@color/buttonColor"
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:id="@+id/button4"
-            android:layout_below="@+id/button3"/>
-    <TextView
-            android:text="@string/textview"
-            android:textColor="@color/braggingText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="71dp"
-            android:id="@+id/textView"/>
-</RelativeLayout>
+
+        <Button
+                android:text="@string/button1"
+                android:background="@color/buttonColor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/menu_button_bottom_padding"
+                android:layout_marginTop="@dimen/menu_button_top_padding"
+                android:id="@+id/button"
+        />
+
+        <Button
+                android:text="@string/button2"
+                android:background="@color/buttonColor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/menu_button_bottom_padding"
+                android:layout_marginTop="@dimen/menu_button_top_padding"
+                android:id="@+id/button2"
+        />
+
+        <Button
+                android:text="@string/button3"
+                android:background="@color/buttonColor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/menu_button_bottom_padding"
+                android:layout_marginTop="@dimen/menu_button_top_padding"
+                android:id="@+id/button3"
+        />
+
+        <Button
+                android:text="@string/button4"
+                android:background="@color/buttonColor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/menu_button_bottom_padding"
+                android:layout_marginTop="@dimen/menu_button_top_padding"
+                android:id="@+id/button4"
+        />
+
+        <TextView
+                android:text="@string/developer_text"
+                android:textColor="@color/braggingText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:textAlignment="center"
+                android:id="@+id/textView"
+        />
+
+    </LinearLayout>
+
+</LinearLayout>
+
