--- a/app/src/main/res/layout/content_pokedex.xml
+++ b/app/src/main/res/layout/content_pokedex.xml
@@ -15,8 +15,7 @@
             android:background="@color/toolbarBackground"
             app:titleTextColor="@color/TitleTextColor"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:theme="?attr/actionBarTheme"
             android:id="@+id/pokedex_toolbar"/>
 
     <android.support.v7.widget.RecyclerView
