--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="dialog_vertical_padding">24dp</dimen>
     <dimen name="dialog_title_to_content_padding">20dp</dimen>
     <dimen name="dialog_content_to_button_padding">24dp</dimen>
+    <dimen name="menu_button_bottom_padding">24dp</dimen>
+    <dimen name="menu_button_top_padding">24dp</dimen>
     <item name="pokemon_image_y_scale" type="dimen" format="float">0.8</item>
     <item name="pokemon_image_x_scale" type="dimen" format="float">0.8</item>
 </resources>
