--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/menu_top_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:background="@color/backgroundGrey"
             tools:showIn="@layout/activity_main"
@@ -72,15 +72,22 @@
                 android:id="@+id/button4"
         />
 
-        <TextView
-                android:text="@string/developer_text"
-                android:textColor="@color/braggingText"
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:textAlignment="center"
-                android:id="@+id/textView"
-        />
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+        >
+
+            <TextView
+                    android:text="@string/developer_text"
+                    android:textColor="@color/braggingText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:id="@+id/textView"
+            />
+
+        </LinearLayout>
 
     </LinearLayout>
 
