--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,5 +13,8 @@
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-
+    <style name="custom_switch_theme"> 
+        <item name="thumbTint">@color/custom_switch_color</item>
+        <item name="trackTint">@color/custom_switch_color</item>
+    </style>
 </resources>
