--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,7 @@
             android:id="@+id/main_toolbar"
     />
 
+
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -43,6 +44,16 @@
         />
 
         <Button
+                android:text="@string/button_5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/button5"
+                android:background="@color/buttonColor"
+                android:layout_marginBottom="24dp"
+                android:layout_marginTop="24dp"
+        />
+
+        <Button
                 android:text="@string/button2"
                 android:background="@color/buttonColor"
                 android:layout_width="match_parent"
@@ -62,6 +73,7 @@
                 android:id="@+id/button3"
         />
 
+        <!--
         <Button
                 android:text="@string/button4"
                 android:background="@color/buttonColor"
@@ -71,7 +83,7 @@
                 android:layout_marginTop="@dimen/menu_button_top_padding"
                 android:id="@+id/button4"
         />
-
+        -->
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
