--- a/app/src/main/res/layout/content_my_shinies.xml
+++ b/app/src/main/res/layout/content_my_shinies.xml
@@ -4,17 +4,30 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_my_shinies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/shinydexBackground"
         tools:context="com.aarstrand.zindre.pokechecklist.MyShiniesActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            android:id="@+id/shinies_list">
-    </android.support.v7.widget.RecyclerView>
+            android:id="@+id/my_shinies_toolbar"
+            android:background="@color/toolbarBackground"
+    />
+
+    <GridView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/my_shinies_toolbar"
+            android:numColumns="auto_fit"
+            android:id="@+id/my_shinies_grid"
+            android:columnWidth="@dimen/gridview_width"
+            android:verticalSpacing="@dimen/gridview_spacing"
+            android:horizontalSpacing="@dimen/gridview_spacing"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
+    />
 
 </RelativeLayout>
