--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,8 @@
     <dimen name="menu_button_bottom_padding">24dp</dimen>
     <dimen name="menu_button_top_padding">24dp</dimen>
     <dimen name="menu_top_margin">30dp</dimen>
+    <dimen name="gridview_width">100dp</dimen>
+    <dimen name="gridview_spacing">10dp</dimen>
     <item name="pokemon_image_y_scale" type="dimen" format="float">0.8</item>
     <item name="pokemon_image_x_scale" type="dimen" format="float">0.8</item>
 </resources>
